--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/4-common.css" type="text/css" />
-    <link rel="stylesheet" href="styles/3-footer.css" type="text/css" />
-    <link rel="stylesheet" href="styles/3-header.css" type="text/css" />
-    <link rel="stylesheet" href="styles/5-filters.css" type="text/css" />
-    <link rel="icon" href="images/icon.png" />
+    <link rel="stylesheet" href="styles/4-common.css" type="text/css">
+    <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
+    <link rel="stylesheet" href="styles/3-header.css" type="text/css">
+    <link rel="stylesheet" href="styles/5-filters.css" type="text/css">
+    <link rel="icon" href="images/icon.png">
   </head>
   <body>
     <header></header>
