--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<head style="color: #FF0000; height: 70px; width: 100%;">
-    <body>        
-    </body>
-    <footer style="color: #00FF00; height: 60px; width: 100%;">
-        best School
-    </footer>
-</head>
+<html>
+    <head>
+        <title>Airbnb Clone</title>
+        <h1 style="background-color: #FF0000; height: 70px; width: 100%;">
+        </h1>
+        <body>
+        </body>
+        <footer style="background-color: #00FF00; height: 60px; width: 100%;
+            position: absolute; bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;">
+            Best School
+        </footer>
+    </head>
+</html>
